Missing secure property for ingress proxy in workshop CRD.

--- a/carvel-packages/installer/bundle/config/ytt/_ytt_lib/packages/educates/11-session-manager/01-crds-workshop.yaml
+++ b/carvel-packages/installer/bundle/config/ytt/_ytt_lib/packages/educates/11-session-manager/01-crds-workshop.yaml
@@ -1063,6 +1063,8 @@ spec:
                             type: integer
                           changeOrigin:
                             type: boolean
+                          secure:
+                            type: boolean
                           headers:
                             type: array
                             items:
