--- a/workshop-images/base-environment/Dockerfile
+++ b/workshop-images/base-environment/Dockerfile
@@ -286,33 +286,33 @@ RUN <<EOF
 EOF
 
 RUN <<EOF
-    set -eo pipefail
-    VERSION=0.12.1
+    OCTANT_VERSION=0.12.1
     ARCHNAME_amd64=64bit
     ARCHNAME_arm64=arm64
     ARCHNAME=ARCHNAME_${TARGETARCH}
     CHECKSUM_amd64="b56ca09fb92314eb6a7b1a0ddcc65b582990e3fdef6e2a996cacd4a24b4e54bf"
     CHECKSUM_arm64="2808448a78d7c55e40ed34bcd3cd4db04b5cf847884938af047b73eb7a40bcd5"
     CHECKSUM=CHECKSUM_${TARGETARCH}
-    curl --silent --fail -L -o /tmp/octant.tar.gz https://github.com/vmware-tanzu/octant/releases/download/v${VERSION}/octant_${VERSION}_Linux-${!ARCHNAME}.tar.gz
-    tar -C /opt/kubernetes/bin --strip-components 1 -xf /tmp/octant.tar.gz octant_${VERSION}_Linux-${!ARCHNAME}/octant
-    mv /opt/kubernetes/bin/octant /opt/kubernetes/bin/octant@${VERSION}
+    set -eo pipefail
+    curl --silent --fail -L -o /tmp/octant.tar.gz https://github.com/vmware-tanzu/octant/releases/download/v${OCTANT_VERSION}/octant_${OCTANT_VERSION}_Linux-${!ARCHNAME}.tar.gz
+    tar -C /opt/kubernetes/bin --strip-components 1 -xf /tmp/octant.tar.gz octant_${OCTANT_VERSION}_Linux-${!ARCHNAME}/octant
+    mv /opt/kubernetes/bin/octant /opt/kubernetes/bin/octant@${OCTANT_VERSION}
     rm -f /tmp/octant.tar.gz
 EOF
 
 RUN <<EOF
-    set -eo pipefail
-    VERSION=0.25.1
+    OCTANT_VERSION=0.25.1
     ARCHNAME_amd64=64bit
     ARCHNAME_arm64=arm64
     ARCHNAME=ARCHNAME_${TARGETARCH}
     CHECKSUM_amd64="b12bb6752e43f4e0fe54278df8e98dee3439c4066f66cdb7a0ca4a1c7d8eaa1e"
     CHECKSUM_arm64="a3eb4973a0c869267e3916bd43e0b41b2bbc73b898376b795a617299c7b2a623"
     CHECKSUM=CHECKSUM_${TARGETARCH}
-    curl --silent --fail -L -o /tmp/octant.tar.gz https://github.com/vmware-tanzu/octant/releases/download/v${VERSION}/octant_${VERSION}_Linux-${!ARCHNAME}.tar.gz
-    tar -C /opt/kubernetes/bin --strip-components 1 -xf /tmp/octant.tar.gz octant_${VERSION}_Linux-${!ARCHNAME}/octant
-    mv /opt/kubernetes/bin/octant /opt/kubernetes/bin/octant@${VERSION}
-    ln -s octant@${VERSION} /opt/kubernetes/bin/octant@latest
+    set -eo pipefail
+    curl --silent --fail -L -o /tmp/octant.tar.gz https://github.com/vmware-tanzu/octant/releases/download/v${OCTANT_VERSION}/octant_${OCTANT_VERSION}_Linux-${!ARCHNAME}.tar.gz
+    tar -C /opt/kubernetes/bin --strip-components 1 -xf /tmp/octant.tar.gz octant_${OCTANT_VERSION}_Linux-${!ARCHNAME}/octant
+    mv /opt/kubernetes/bin/octant /opt/kubernetes/bin/octant@${OCTANT_VERSION}
+    ln -s octant@${OCTANT_VERSION} /opt/kubernetes/bin/octant@latest
     rm -f /tmp/octant.tar.gz
 EOF
 
