--- a/carvel-packages/installer/bundle/kbld/kbld-bundle.yaml
+++ b/carvel-packages/installer/bundle/kbld/kbld-bundle.yaml
@@ -4,24 +4,19 @@ minimumRequiredVersion: 0.30.0
 kind: Config
 searchRules:
   - keyMatcher:
-      name: SESSION_MANAGER_IMAGE
+      name: config.yaml
+    updateStrategy:
+      yaml:
+        searchRules:
+        - keyMatcher:
+            name: image
   - keyMatcher:
-      name: SECRETS_MANAGER_IMAGE
+      name: values.yaml
+    updateStrategy:
+      yaml:
+        searchRules:
+        - keyMatcher:
+            name: image
+  # This rule replaces acmeresolver image in cert-manager deployment (after upstream descriptor has been modified by educates installer)
   - keyMatcher:
-      name: TUNNEL_MANAGER_IMAGE
-  - keyMatcher:
-      name: TRAINING_PORTAL_IMAGE
-  - keyMatcher:
-      name: DOCKER_IN_DOCKER_IMAGE
-  - keyMatcher:
-      name: DOCKER_REGISTRY_IMAGE
-  - keyMatcher:
-      name: PAUSE_CONTAINER_IMAGE
-  - keyMatcher:
-      name: BASE_ENVIRONMENT_IMAGE
-  - keyMatcher:
-      name: JDK8_ENVIRONMENT_IMAGE
-  - keyMatcher:
-      name: JDK11_ENVIRONMENT_IMAGE
-  - keyMatcher:
-      name: CONDA_ENVIRONMENT_IMAGE
+      name: acmesolver-image
