--- a/carvel-packages/installer/bundle/config/ytt/_ytt_lib/packages/educates/_ytt_lib/lookup-service/overlays.yaml/overlay-ingress.yaml
+++ b/carvel-packages/installer/bundle/config/ytt/_ytt_lib/packages/educates/_ytt_lib/lookup-service/overlays.yaml/overlay-ingress.yaml
@@ -4,6 +4,9 @@
 #@overlay/match by=overlay.subset({"kind":"Ingress"})
 ---
 spec:
+  #@overlay/match missing_ok=True
+  #@ if/end data.values.ingressClass:
+  ingressClassName: #@ data.values.ingressClass
   rules:
   #@overlay/match by=overlay.index(0)
   - host: #@ data.values.tld
