--- a/carvel-packages/installer/bundle/config/ytt/_ytt_lib/packages/educates/_ytt_lib/lookup-service/overlays.yaml/overlay-ingress.yaml
+++ b/carvel-packages/installer/bundle/config/ytt/_ytt_lib/packages/educates/_ytt_lib/lookup-service/overlays.yaml/overlay-ingress.yaml
@@ -3,6 +3,13 @@
 
 #@overlay/match by=overlay.subset({"kind":"Ingress"})
 ---
+metadata:
+  #@overlay/match missing_ok=True
+  #@ if/end data.values.certName != None:
+  annotations:
+   ingress.kubernetes.io/force-ssl-redirect: "true"
+   nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+   nginx.ingress.kubernetes.io/ssl-redirect: "true"
 spec:
   #@overlay/match missing_ok=True
   #@ if/end data.values.ingressClass:
