Fixing problem generated by previous kbld fix

--- a/carvel-packages/installer/bundle/config/ytt/_ytt_lib/config/save-config-overlay.yaml
+++ b/carvel-packages/installer/bundle/config/ytt/_ytt_lib/config/save-config-overlay.yaml
@@ -18,5 +18,5 @@ metadata:
   name: educates-config
   namespace: educates
 data:
-  config.yaml: #@ yaml.encode(removeNulls(data.values.config))
-  values.yaml: #@ yaml.encode(data.values.values)
+  educates-original-config.yaml: #@ yaml.encode(removeNulls(data.values.config))
+  educates-processed-values.yaml: #@ yaml.encode(data.values.values)
