--- a/carvel-packages/installer/bundle/config/ytt/_ytt_lib/packages/educates/06-secrets.yaml
+++ b/carvel-packages/installer/bundle/config/ytt/_ytt_lib/packages/educates/06-secrets.yaml
@@ -15,9 +15,10 @@ metadata:
   annotations:
     kapp.k14s.io/versioned: ""
     kapp.k14s.io/num-versions: "5"
-data:
-  values.yaml: #@ base64.encode(yaml.encode(data.values))
-  kyverno-policies.yaml: #@ base64.encode(yaml.encode(kyverno_policies))
+    kapp.k14s.io/disable-original: ""
+stringData:
+  educates-operator-config.yaml: #@ yaml.encode(data.values)
+  kyverno-policies.yaml: #@ yaml.encode(kyverno_policies)
 
 #@ ingress_certificate = getattr(data.values.clusterIngress.tlsCertificate, "tls.crt")
 #@ ingress_private_key = getattr(data.values.clusterIngress.tlsCertificate, "tls.key")
