Allow aliasing of workshop names in training portal.

--- a/carvel-packages/installer/bundle/config/ytt/_ytt_lib/packages/educates/11-session-manager/01-crds-trainingportal.yaml
+++ b/carvel-packages/installer/bundle/config/ytt/_ytt_lib/packages/educates/11-session-manager/01-crds-trainingportal.yaml
@@ -253,6 +253,9 @@ spec:
                     properties:
                       name:
                         type: string
+                        minLength: 1
+                      alias:
+                        type: string
                       labels:
                         type: array
                         items:
