Added mirror capabilities

--- a/carvel-packages/installer/bundle/config/ytt/values-schema.yaml
+++ b/carvel-packages/installer/bundle/config/ytt/values-schema.yaml
@@ -126,6 +126,11 @@ localKindCluster:
     - hostPath: ""
       containerPath: ""
       readOnly: false
+  registryMirrors:
+    - mirror: ""
+      url: ""
+      username: ""
+      password: ""
 #@schema/nullable
 localDNSResolver:
   targetAddress: ""
