Workshop CRD missing path property for ingresses.

--- a/carvel-packages/installer/bundle/config/ytt/_ytt_lib/packages/educates/11-session-manager/01-crds-workshop.yaml
+++ b/carvel-packages/installer/bundle/config/ytt/_ytt_lib/packages/educates/11-session-manager/01-crds-workshop.yaml
@@ -1061,6 +1061,8 @@ spec:
                             type: string
                           port:
                             type: integer
+                          path:
+                            type: string
                           changeOrigin:
                             type: boolean
                           secure:
